# Tetris

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  BlockManager.cpp  BlockManager.h  Color.h  ColorPalettes.h  Game.cpp  Game.h  GameboyTheme.cpp  GameboyTheme.h  InputAction.cpp  InputAction.h  InputHandler.cpp  InputHandler.h  PlayerController.cpp  PlayerController.h  Position.h  Renderer.cpp  Renderer.h  Shapes.h  Theme.cpp  Theme.h  main.cpp
src/UI/: Button.cpp  Button.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  SettingsMenu.cpp  SettingsMenu.h  TextBlock.cpp  TextBlock.h  UIAlignment.h  UIElement.cpp  UIElement.h
